2009-05-04  Peter O'Gorman  <pogma@thewrittenword.com>

	* utils.cc: Don't define HAVE_C99_VSNPRINTF here.

2009-05-01  John W. Eaton  <jwe@octave.org>

	* error.cc (Vlast_error_file, Vlast_error_name, Vlast_error_line,
	Vlast_error_column): Delete.
	(Vlast_error_stack): New static variable.
	(initialize_last_error_stack): New static function.
	(verror, Frethrow, Flasterror): Set or use Vlast_error_stack, not
	Vlast_error_file, etc.

2009-04-27  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (octave_class::dotref): Handle empty parent class.
	(octave_class::get_current_method_class): Allow result to be empty.
	(called_from_builtin): New static function.
	(octave_class::subsref, octave_class::subsasgn): Use it.

2009-04-23  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (Fclass): Check newly constructed classes against
	the first constructed object of the class.

	* ov-class.h, ov-class.cc (octave_class::exmplar_info): New class.
	(exemplar_map): New static data member.
	(exemplar_iterator, exemplar_const_iterator): New typedefs.

	* ov-class.h (octave_class::nparents,
	octave_class::parent_class_name_list): New functions.
	* ov.h (octave_base_value::nparents,
	octave_base_value::parent_class_name_list): New functions.
	* ov-base.h, ov-base.cc (octave_base_value::nparents,
	octave_base_value::parent_class_name_list): New functions.
	(parent_class_names): Error if called for wrong type argument.

	* symtab.cc (load_out_of_date_fcn): New arg, dispatch_type.
	(out_of_date_check_internal): Pass dispatch type to
	load_out_of_date_fcn.

2009-04-22  John W. Eaton  <jwe@octave.org>

	* ov-base-int.cc (octave_base_int_helper<T, false,
	false>::char_value_out_of_range): Correct result for specialization.

	* ov-class.cc (octave_class::dotref, octave_class::subsasgn):
	Protect against possibly invalid octave_value -> string conversions.

2009-04-22  Robert T. Short  <octave@phaselockedsystems.com>

	* variables.cc (symbol_exist): Also return 1 for objects.